--- a/type-lists/multipart.yaml
+++ b/type-lists/multipart.yaml
@@ -16,8 +16,8 @@
   encoding: 8bit
   references:
   - IANA
-  - ! '[Patrik_Faltstrom]'
-  - ! '{multipart/appledouble=http://www.iana.org/assignments/media-types/multipart/appledouble}'
+  - "[Patrik_Faltstrom]"
+  - "{multipart/appledouble=http://www.iana.org/assignments/media-types/multipart/appledouble}"
   xrefs: !ruby/hash:MIME::Types::Container
     person:
     - Patrik_Faltstrom
@@ -30,7 +30,7 @@
   references:
   - IANA
   - RFC7233
-  - ! '{multipart/byteranges=http://www.iana.org/assignments/media-types/multipart/byteranges}'
+  - "{multipart/byteranges=http://www.iana.org/assignments/media-types/multipart/byteranges}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc7233
@@ -55,7 +55,7 @@
   references:
   - IANA
   - RFC1847
-  - ! '{multipart/encrypted=http://www.iana.org/assignments/media-types/multipart/encrypted}'
+  - "{multipart/encrypted=http://www.iana.org/assignments/media-types/multipart/encrypted}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc1847
@@ -68,7 +68,7 @@
   references:
   - IANA
   - RFC4735
-  - ! '{multipart/example=http://www.iana.org/assignments/media-types/multipart/example}'
+  - "{multipart/example=http://www.iana.org/assignments/media-types/multipart/example}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc4735
@@ -81,7 +81,7 @@
   references:
   - IANA
   - RFC2388
-  - ! '{multipart/form-data=http://www.iana.org/assignments/media-types/multipart/form-data}'
+  - "{multipart/form-data=http://www.iana.org/assignments/media-types/multipart/form-data}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc2388
@@ -93,8 +93,8 @@
   encoding: base64
   references:
   - IANA
-  - ! '[Dave_Crocker]'
-  - ! '{multipart/header-set=http://www.iana.org/assignments/media-types/multipart/header-set}'
+  - "[Dave_Crocker]"
+  - "{multipart/header-set=http://www.iana.org/assignments/media-types/multipart/header-set}"
   xrefs: !ruby/hash:MIME::Types::Container
     person:
     - Dave_Crocker
@@ -131,7 +131,7 @@
   references:
   - IANA
   - RFC2387
-  - ! '{multipart/related=http://www.iana.org/assignments/media-types/multipart/related}'
+  - "{multipart/related=http://www.iana.org/assignments/media-types/multipart/related}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc2387
@@ -144,7 +144,7 @@
   references:
   - IANA
   - RFC6522
-  - ! '{multipart/report=http://www.iana.org/assignments/media-types/multipart/report}'
+  - "{multipart/report=http://www.iana.org/assignments/media-types/multipart/report}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc6522
@@ -157,7 +157,7 @@
   references:
   - IANA
   - RFC1847
-  - ! '{multipart/signed=http://www.iana.org/assignments/media-types/multipart/signed}'
+  - "{multipart/signed=http://www.iana.org/assignments/media-types/multipart/signed}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc1847
@@ -171,7 +171,7 @@
   - IANA
   - RFC2421
   - RFC2423
-  - ! '{multipart/voice-message=http://www.iana.org/assignments/media-types/multipart/voice-message}'
+  - "{multipart/voice-message=http://www.iana.org/assignments/media-types/multipart/voice-message}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc2421
@@ -188,9 +188,9 @@
   encoding: base64
   references:
   - IANA
-  - ! '[W3C]'
-  - ! '[Robin_Berjon]'
-  - ! '{multipart/x-mixed-replace=http://www.iana.org/assignments/media-types/multipart/x-mixed-replace}'
+  - "[W3C]"
+  - "[Robin_Berjon]"
+  - "{multipart/x-mixed-replace=http://www.iana.org/assignments/media-types/multipart/x-mixed-replace}"
   xrefs: !ruby/hash:MIME::Types::Container
     person:
     - Robin_Berjon
