--- a/type-lists/message.yaml
+++ b/type-lists/message.yaml
@@ -5,7 +5,7 @@
   references:
   - IANA
   - RFC3862
-  - ! '{message/CPIM=http://www.iana.org/assignments/media-types/message/CPIM}'
+  - "{message/CPIM=http://www.iana.org/assignments/media-types/message/CPIM}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc3862
@@ -18,7 +18,7 @@
   references:
   - IANA
   - RFC1894
-  - ! '{message/delivery-status=http://www.iana.org/assignments/media-types/message/delivery-status}'
+  - "{message/delivery-status=http://www.iana.org/assignments/media-types/message/delivery-status}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc1894
@@ -31,7 +31,7 @@
   references:
   - IANA
   - RFC3798
-  - ! '{message/disposition-notification=http://www.iana.org/assignments/media-types/message/disposition-notification}'
+  - "{message/disposition-notification=http://www.iana.org/assignments/media-types/message/disposition-notification}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc3798
@@ -44,7 +44,7 @@
   references:
   - IANA
   - RFC4735
-  - ! '{message/example=http://www.iana.org/assignments/media-types/message/example}'
+  - "{message/example=http://www.iana.org/assignments/media-types/message/example}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc4735
@@ -69,7 +69,7 @@
   references:
   - IANA
   - RFC5965
-  - ! '{message/feedback-report=http://www.iana.org/assignments/media-types/message/feedback-report}'
+  - "{message/feedback-report=http://www.iana.org/assignments/media-types/message/feedback-report}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc5965
@@ -82,7 +82,7 @@
   references:
   - IANA
   - RFC6532
-  - ! '{message/global=http://www.iana.org/assignments/media-types/message/global}'
+  - "{message/global=http://www.iana.org/assignments/media-types/message/global}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc6532
@@ -95,7 +95,7 @@
   references:
   - IANA
   - RFC6533
-  - ! '{message/global-delivery-status=http://www.iana.org/assignments/media-types/message/global-delivery-status}'
+  - "{message/global-delivery-status=http://www.iana.org/assignments/media-types/message/global-delivery-status}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc6533
@@ -108,7 +108,7 @@
   references:
   - IANA
   - RFC6533
-  - ! '{message/global-disposition-notification=http://www.iana.org/assignments/media-types/message/global-disposition-notification}'
+  - "{message/global-disposition-notification=http://www.iana.org/assignments/media-types/message/global-disposition-notification}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc6533
@@ -121,7 +121,7 @@
   references:
   - IANA
   - RFC6533
-  - ! '{message/global-headers=http://www.iana.org/assignments/media-types/message/global-headers}'
+  - "{message/global-headers=http://www.iana.org/assignments/media-types/message/global-headers}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc6533
@@ -134,7 +134,7 @@
   references:
   - IANA
   - RFC7230
-  - ! '{message/http=http://www.iana.org/assignments/media-types/message/http}'
+  - "{message/http=http://www.iana.org/assignments/media-types/message/http}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc7230
@@ -147,7 +147,7 @@
   references:
   - IANA
   - RFC5438
-  - ! '{message/imdn+xml=http://www.iana.org/assignments/media-types/message/imdn+xml}'
+  - "{message/imdn+xml=http://www.iana.org/assignments/media-types/message/imdn+xml}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc5438
@@ -161,8 +161,8 @@
   references:
   - IANA
   - RFC5537
-  - ! '[Henry_Spencer]'
-  - ! '{message/news=http://www.iana.org/assignments/media-types/message/news}'
+  - "[Henry_Spencer]"
+  - "{message/news=http://www.iana.org/assignments/media-types/message/news}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc5537
@@ -206,7 +206,7 @@
   references:
   - IANA
   - RFC2660
-  - ! '{message/s-http=http://www.iana.org/assignments/media-types/message/s-http}'
+  - "{message/s-http=http://www.iana.org/assignments/media-types/message/s-http}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc2660
@@ -219,7 +219,7 @@
   references:
   - IANA
   - RFC3261
-  - ! '{message/sip=http://www.iana.org/assignments/media-types/message/sip}'
+  - "{message/sip=http://www.iana.org/assignments/media-types/message/sip}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc3261
@@ -232,7 +232,7 @@
   references:
   - IANA
   - RFC3420
-  - ! '{message/sipfrag=http://www.iana.org/assignments/media-types/message/sipfrag}'
+  - "{message/sipfrag=http://www.iana.org/assignments/media-types/message/sipfrag}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc3420
@@ -245,7 +245,7 @@
   references:
   - IANA
   - RFC3886
-  - ! '{message/tracking-status=http://www.iana.org/assignments/media-types/message/tracking-status}'
+  - "{message/tracking-status=http://www.iana.org/assignments/media-types/message/tracking-status}"
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc3886
@@ -258,8 +258,8 @@
   obsolete: true
   references:
   - IANA
-  - ! '[Nicholas_Parks_Young]'
-  - ! '{message/vnd.si.simp=http://www.iana.org/assignments/media-types/message/vnd.si.simp}'
+  - "[Nicholas_Parks_Young]"
+  - "{message/vnd.si.simp=http://www.iana.org/assignments/media-types/message/vnd.si.simp}"
   xrefs: !ruby/hash:MIME::Types::Container
     person:
     - Nicholas_Parks_Young
@@ -271,8 +271,8 @@
   encoding: base64
   references:
   - IANA
-  - ! '[Mick_Conley]'
-  - ! '{message/vnd.wfa.wsc=http://www.iana.org/assignments/media-types/message/vnd.wfa.wsc}'
+  - "[Mick_Conley]"
+  - "{message/vnd.wfa.wsc=http://www.iana.org/assignments/media-types/message/vnd.wfa.wsc}"
   xrefs: !ruby/hash:MIME::Types::Container
     person:
     - Mick_Conley
